@@ -200,6 +200,13 @@ The current configuration can be printed by running =clpm config info=.
   + =:type= :: A keyword specifying which HTTP client to use. Defaults to
     =:auto=.
 
+* =(:log)=
+  This table contains configuration for the logging system.
+
+  + =:level= :: A keyword specifying the default logging level. One of =:off=,
+    =:fatal=, =:error=, =:warn=, =:info=, =:debug=, =:trace=. Defaults to
+    =:warn=.
+
 * =(:tar)=
   This table contains configuration for using the tar executable as the method
   to extract archives in tar format.
